# document-intelligence-rag

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RESULTS.md  app.py  pyproject.toml
.github/workflows/: ci.yml
api/: routes.py  session.py
demo_docs/: rag_overview.md  transformer_overview.md
rag/: __init__.py
rag/cache/: __init__.py  query_cache.py
rag/evaluation/: __init__.py  beir_eval.py
rag/finetuning/: __init__.py  trainer.py
rag/generation/: __init__.py  chain.py  ocr_corrector.py
rag/ingestion/: __init__.py  base.py  chunker.py  image.py  markdown.py  pdf.py  pipeline.py  text.py
rag/retrieval/: __init__.py  embeddings.py  retriever.py
rag/routing/: __init__.py  router.py
scripts/: evaluate.py  finetune.py
static/: index.html
tests/: test_api.py  test_generation_security.py  test_retrieval.py
