[project]
name = "document-intelligence-rag"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pypdf>=4.0.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.4",
    "bm25s>=0.1.10",
    "sentence-transformers>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "beir>=2.0.0",
    "accelerate>=1.1.0",
]

[tool.setuptools]
packages = ["rag", "models"]