[project]
name = "document-intelligence-rag"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "pypdf>=4.0.0",
    "numpy>=1.26.0",
    "faiss-cpu>=1.7.4",
    "bm25s>=0.1.10",
    "sentence-transformers>=2.6.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "python-dotenv>=1.0.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "beir>=2.0.0",
    "accelerate>=1.1.0",
]

[tool.setuptools]
packages = ["rag"]